--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 /* about section image css */
