--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .content {
-    padding: 0 18px;
+    padding: 5 18px;
     display: none;
     overflow: hidden;
     background-color: #f1f1f1;
@@ -94,40 +94,12 @@ body {
 
 
 
-/* #map {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #004e7a;
-  position: relative !important;
-  } */
-
-/* Add a black background color to the top navigation */
-/* .topnav {
-    background-color: #333;
-    overflow: hidden;
-    padding-inline-end: 12cm;
-} */
-
-/* Style the links inside the navigation bar */
-/* .topnav a {
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 30px;
-    text-decoration: none;
-    font-size: 17px;
-} */
-
-/* Change the color of links on hover */
-/* .topnav a:hover {
-    background-color: #ddd;
-    color: rgb(50, 111, 119);
-} */
-
-/* Add a color to the active/current link */
-/* .topnav a.active {
-    background-color: #0449aa;
-    color: white;
-} */
+#map {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #004e7a;
+    position: relative;
+    size: 10cm;
+}
